# script_tool_and_config

./: .chezmoi.toml  .chezmoi.toml.tmpl  .chezmoiignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHEZMOI_GUIDE.md  CHEZMOI_OPTIMIZATION.md  CLAUDE.md  ENCODING_AND_LINE_ENDINGS.md  INSTALL_GUIDE.md  LICENSE  MULTI_OS_COMMON_TOOLS.md  PLATFORM_SUPPORT.md  README.md  SOFTWARE_LIST.md  VERIFICATION_RESULT.md  chezmoi_use_guide.md  deploy.sh  install.sh  macos_chezmoi_managed_files.md  macos_chezmoi_status.md  macos_next_steps.md  macos_setup_guide.md  md_files_structure.md  os_setup_guide.md  project_structure.md  star_repos.md
.chezmoi/: .chezmoidata.toml  .chezmoiignore  chezmoi.toml  detect_windows_git_paths.sh  dot_bash_profile.tmpl  dot_bashrc.tmpl  dot_gitconfig.tmpl  dot_rmux.conf.tmpl  dot_tmux.conf  dot_tmux.conf.tmpl  dot_zprofile  dot_zprofile.tmpl  dot_zshrc  dot_zshrc.tmpl  run_after_claude-code-settings.sh.tmpl  run_once_00-install-version-managers.sh.tmpl  run_once_90-install-claude-code.sh.tmpl  run_once_91-install-codex.sh.tmpl  run_once_92-install-codewhale.sh.tmpl  run_once_92-install-deepseek.sh.tmpl  run_once_93-install-cursor.sh.tmpl  run_once_before_install-claude-code.sh.tmpl  (+26 more)
script_tools/temp_test_scripts/AutoCreateProject/TempAutoCreateProjectTest/: CMakeLists.txt  TempAutoCreateProjectTest.srctrldb  TempAutoCreateProjectTest.srctrlprj
useful_scripts/temp_tools/AutoCreateProject/AutoCreateProjectTest/: CMakeLists.txt
useful_scripts/temp_tools/AutoCreateProject/AutoCreateProjectTest/src/: funciton.h  main.c
(+499 files in other folders)
